# astra-energy-ha

./: .env.example  .gitignore  AGENTS.md  README.md  hacs.json  pyproject.toml
.github/workflows/: ci.yml
custom_components/astra_energy/: __init__.py  api.py  browser_proxy.py  config_flow.py  const.py  coordinator.py  diagnostics.py  manifest.json  reporting.py  sensor.py  services.yaml  statistics.py  web_session.py
custom_components/astra_energy/translations/: de.json  en.json
docs/: api-web-capture.md  api.md  openapi-astra-android.yaml  openapi-web-observed.yaml  quality-scale.md
reports/: astra-recorder-anomaly-audit-2026-06-21.json  astra-recorder-anomaly-audit-after-repair-2026-06-21.json  astra-recorder-live-adjustments-2026-06-21.json
tests/: test_capture_analysis.py  test_cdp_cookie_export.py  test_ha_energy_recorder_audit.py  test_integration_setup_static.py
tests/fixtures/: astra_energy_spike_day.json
tools/: analyze_capture.py  analyze_raw_dump.py  android_static_scan.md  astra_15min_export.py  astra_cdp_cookie_export.py  astra_endpoint_discovery.py  astra_mobile_probe.py  astra_raw_dump.py  astra_web_login_probe.py  astra_web_probe.py  cdp_capture.py  env_loader.py  ha_energy_recorder_audit.py
tools/astra_browser_proxy/: Dockerfile  README.md  app.py  docker-compose.example.yml
